# rustrover_audio

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
dsp-core/: Cargo.toml
dsp-core/dsp_core/: Cargo.toml
dsp-core/src/: analyzer_advanced.rs  biquad_wrapper.rs  lib.rs  limiter.rs  magnetic_eq.rs  parallel_filter_advanced.rs  processor_trait.rs  riaa_eq_advanced.rs
dsp_core/src/: lib.rs
rustrover_ai_plugin/: Cargo.toml
rustrover_ai_plugin/src/: lib.rs
warm_tape_plugin/: Cargo.toml
warm_tape_plugin/src/: lib.rs
xtask/src/: main.rs
